@@ -10,14 +10,14 @@ Version 2.14
 * The following bugs are resolved with this release:
 
   386, 6420, 7101, 9730, 9732, 9809, 10138, 10149, 10157, 11257, 11258,
-  11487, 11532, 11578, 11653, 11668, 11697, 11724, 11799, 11820, 11837,
-  11857, 11869, 11892, 11895, 11901, 11945, 11947, 11952, 11987, 12052,
-  12083, 12158, 12178, 12200, 12346, 12393, 12420, 12432, 12445, 12449,
-  12453, 12454, 12460, 12469, 12489, 12509, 12510, 12511, 12518, 12527,
-  12541, 12545, 12551, 12582, 12583, 12587, 12597, 12601, 12611, 12625,
-  12626, 12631, 12650, 12653, 12655, 12660, 12671, 12681, 12685, 12711,
-  12713, 12714, 12717, 12723, 12724, 12734, 12738, 12746, 12766, 12775,
-  12777, 12782, 12788, 12792, 12795, 12811, 12813, 12814
+  11487, 11532, 11578, 11653, 11668, 11697, 11724, 11781, 11799, 11820,
+  11837, 11857, 11869, 11892, 11895, 11901, 11945, 11947, 11952, 11987,
+  12052, 12083, 12158, 12178, 12200, 12346, 12393, 12420, 12432, 12445,
+  12449, 12453, 12454, 12460, 12469, 12489, 12509, 12510, 12511, 12518,
+  12527, 12541, 12545, 12551, 12582, 12583, 12587, 12597, 12601, 12611,
+  12625, 12626, 12631, 12650, 12653, 12655, 12660, 12671, 12681, 12685,
+  12711, 12713, 12714, 12717, 12723, 12724, 12734, 12738, 12746, 12766,
+  12775, 12777, 12782, 12788, 12792, 12795, 12811, 12813, 12814
 
 * The RPC implementation in libc is obsoleted.  Old programs keep working
   but new programs cannot be linked with the routines in libc anymore.
